Add complete CRUD API for users/tasks with MySQL integration
Implement user update & delete API

Add cascading delete for user-task relationships

Configure SQLAlchemy models for automatic task cleanup

Include error handling and validation

Ensure tasks are deleted when parent user is removed

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 fastapi==0.109.2
 uvicorn==0.27.1
-sqlalchemy==2.0.29
+sqlalchemy>=2.0.40
 pymysql==1.1.0
 python-dotenv==1.0.1
+pydantic[email]>=2.0
+email-validator>=2.0.0
